tests/snapshots/run_wpt_conformance__trtx_div_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float32 1D constant tensors",
    "trtx",
    "PASS",
)
